--- a/settings/project.json
+++ b/settings/project.json
@@ -8,10 +8,26 @@
   },
   "collision-matrix": [
     [
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      false
+    ],
+    [
+      false,
+      true,
       true,
       true
     ],
     [
+      false,
+      false,
       true,
       false
     ]
@@ -23,7 +39,9 @@
   "fit-width": false,
   "group-list": [
     "default",
-    "terrain"
+    "terrain",
+    "content",
+    "trigger"
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
