--- a/settings/project.json
+++ b/settings/project.json
@@ -1,4 +1,11 @@
 {
+  "cocos-analytics": {
+    "appID": "13798",
+    "appSecret": "959b3ac0037d0f3c2fdce94f8421a9b2",
+    "channel": "",
+    "enable": false,
+    "version": ""
+  },
   "collision-matrix": [
     [
       false,
@@ -10,10 +17,12 @@
       false,
       false,
       true,
-      false
+      false,
+      true
     ],
     [
       false,
+      true,
       true,
       true,
       true
@@ -23,6 +32,13 @@
       false,
       true,
       false
+    ],
+    [
+      false,
+      true,
+      true,
+      false,
+      true
     ]
   ],
   "design-resolution-height": 640,
@@ -34,7 +50,8 @@
     "default",
     "terrain",
     "content",
-    "trigger"
+    "trigger",
+    "content1"
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
@@ -42,11 +59,5 @@
     "width": 960
   },
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current",
-  "cocos-analytics": {
-    "enable": false,
-    "appID": "13798",
-    "appSecret": "959b3ac0037d0f3c2fdce94f8421a9b2"
-  }
+  "use-project-simulator-setting": false
 }
