--- a/settings/project.json
+++ b/settings/project.json
@@ -25,6 +25,7 @@
       true,
       true,
       true,
+      true,
       true
     ],
     [
@@ -38,6 +39,15 @@
       true,
       true,
       false,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
+      true,
       true
     ]
   ],
@@ -51,7 +61,8 @@
     "terrain",
     "content",
     "trigger",
-    "content1"
+    "content1",
+    "terrain1"
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
@@ -59,6 +70,5 @@
     "width": 960
   },
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
