--- a/settings/project.json
+++ b/settings/project.json
@@ -1,11 +1,5 @@
 {
-  "cocos-analytics": {
-    "appID": "13798",
-    "appSecret": "959b3ac0037d0f3c2fdce94f8421a9b2",
-    "channel": "",
-    "enable": false,
-    "version": ""
-  },
+  "assets-sort-type": "name",
   "collision-matrix": [
     [
       false,
@@ -15,7 +9,7 @@
     ],
     [
       false,
-      false,
+      true,
       true,
       false,
       true
@@ -30,30 +24,53 @@
     ],
     [
       false,
+      false,
+      true,
+      false,
+      null,
+      null,
+      true
+    ],
+    [
+      false,
+      true,
+      true,
+      false,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
+      true,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      true,
       false,
       true,
       false
-    ],
-    [
-      false,
-      true,
-      true,
-      false,
-      true,
-      true
-    ],
-    [
-      false,
-      false,
-      true,
-      false,
-      true,
-      true
     ]
   ],
   "design-resolution-height": 640,
   "design-resolution-width": 960,
   "excluded-modules": [],
+  "facebook": {
+    "appID": "",
+    "audience": {
+      "enable": false
+    },
+    "enable": false,
+    "live": {
+      "enable": false
+    }
+  },
   "fit-height": true,
   "fit-width": false,
   "group-list": [
@@ -62,13 +79,15 @@
     "content",
     "trigger",
     "content1",
-    "terrain1"
+    "terrain1",
+    "content2"
   ],
+  "last-module-event-record-time": 0,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
-  "use-customize-simulator": false,
+  "use-customize-simulator": true,
   "use-project-simulator-setting": false
 }
