--- a/settings/project.json
+++ b/settings/project.json
@@ -12,10 +12,13 @@
       true,
       true,
       false,
+      true,
+      null,
       true
     ],
     [
       false,
+      true,
       true,
       true,
       true,
@@ -37,25 +40,37 @@
       true,
       false,
       true,
-      true
-    ],
-    [
-      false,
-      false,
-      true,
-      false,
-      true,
       true,
       true
     ],
     [
       false,
       false,
-      false,
       true,
       false,
       true,
-      false
+      true,
+      true
+    ],
+    [
+      false,
+      true,
+      true,
+      true,
+      true,
+      true,
+      true,
+      true
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      false,
+      true,
+      true
     ]
   ],
   "design-resolution-height": 640,
@@ -80,7 +95,8 @@
     "trigger",
     "content1",
     "terrain1",
-    "content2"
+    "content2",
+    "terrain2"
   ],
   "last-module-event-record-time": 0,
   "simulator-orientation": false,
